--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@ $(document).ready(function(){
                             <!-- <div class="course-length-badge">
                               <span>Leginar Investment Platform</span>
                             </div> -->
-                            <span class="number">36%</span>
-                            <p class="info">Litigation financing's AAR </p>
+                            <span class="number">>30%</span>
+                            <p class="info">Litigation financing's anverage annual return</p>
                           </div>              
                         </div>
                 </div>
@@ -195,8 +195,8 @@ $(document).ready(function(){
                             <!-- <div class="course-length-badge">
                               <span>Leginar Management Tools</span>
                             </div> -->
-                            <span class="number">50+</span>
-                            <p class="info">Civil lawsuits on the platform</p>
+                            <span class="number">50%</span>
+                            <p class="info">Finances for your litigation covered in 1 day</p>
                           </div>                       
                         </div>
                 </div>
@@ -216,7 +216,7 @@ $(document).ready(function(){
       <div class="col-xl-6 col-lg-6 col-md-7 col-12">
         <div class="hero-content">
           <h2> How it Works <br><br></h2>
-          <h3> Litigation Financing on Leginar </h3>
+          <h3> Financing on Leginar </h3>
           <h4><br>Leginar allows people to own shares of a litigation as an alternative asset investment. <br><br>
 
 People pursuing lawsuits will submit their case to Leginar. From there, our in-house legal team verifies the case and uploads it to the public exchange, where shares can be bought and sold immediately.<br><br>
