spiffed it up a bit

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ $(document).ready(function(){
       <div class="col-xl-6 col-lg-6 col-md-7 col-12">
         <div class="hero-content">
           <h1 font-family: Inter>Invest in lawsuits.</h1>
-          <p>Leginar provides litigation financing by letting people buy shares of lawsuits.</p>
+          <p>Leginar is building the platform for people to invest in lawsuits.</p>
           <div class="hero-btn"><a href="https://airtable.com/shrnOGkO3SrQm05h2" target="_blank" class="btn">Join Waitlist</a></div>
         </div>
       </div>
@@ -183,8 +183,8 @@ $(document).ready(function(){
                             <!-- <div class="course-length-badge">
                               <span>Leginar Investment Platform</span>
                             </div> -->
-                            <span class="number">>30%</span>
-                            <p class="info">Litigation financing's anverage annual return</p>
+                            <span class="number">30%</span>
+                            <p class="info">Litigation financing's ARR</p>
                           </div>              
                         </div>
                 </div>
@@ -195,8 +195,8 @@ $(document).ready(function(){
                             <!-- <div class="course-length-badge">
                               <span>Leginar Management Tools</span>
                             </div> -->
-                            <span class="number">50%</span>
-                            <p class="info">Finances for your litigation covered in 1 day</p>
+                            <span class="number">100%</span>
+                            <p class="info">Of accepted cases have legal fees covered, debt-free</p>
                           </div>                       
                         </div>
                 </div>
@@ -217,9 +217,9 @@ $(document).ready(function(){
         <div class="hero-content">
           <h2> How it Works <br><br></h2>
           <h3> Financing on Leginar </h3>
-          <h4><br>Leginar allows people to own shares of a litigation as an alternative asset investment. <br><br>
+          <h4><br>Leginar allows people to invest in portions of litigations as an alternative asset investment. <br><br>
 
-People pursuing lawsuits will submit their case to Leginar. From there, our in-house legal team verifies the case and uploads it to the public exchange, where shares can be bought and sold immediately.<br><br>
+People pursuing lawsuits who need money to help get it off the ground will submit their case to Leginar. From there, our in-house legal team verifies the case and uploads it to the public exchange, where shares can be bought and sold immediately.<br><br>
 
 Shareholders can either withhold their shares throughout the duration of the litigation, or sell them as secondaries to other investors on the platform.<br><br>
 
@@ -378,7 +378,7 @@ Once the case closes, shareholders make a return on their investment proportiona
               <ul class="course-inline-list">
                 <li><a href=""><i class="icon icon-check-2"></i>Provide immediate investment and a community of support for your clients</a></li>
                 <li><a href=""><i class="icon icon-check-2"></i>Earn carry in the cases you bring to the Leginar platform</a></li>
-                <li><a href=""><i class="icon icon-check-2"></i>Earn for trading your data back to Leginar to help us make better win estimates for future cases</a></li>
+                <li><a href=""><i class="icon icon-check-2"></i>Open rolling indexes for people to invest in your clients' cases</a></li>
               </ul>
           </div>
         </div>
@@ -395,7 +395,7 @@ Once the case closes, shareholders make a return on their investment proportiona
       <div class="row justify-content-center">
           <div class="col-md-9 col-lg-8 col-xl-7" data-aos="flip-down" data-aos-delay="30" data-aos-duration="2000" data-aos-once="true">
             <div class="footer-content">
-                <h2>Ready to start earning?</h2>
+                <h2>Ready to start?</h2>
                 <div class="footer-btn"><a href="https://airtable.com/shrnOGkO3SrQm05h2" target="_blank" class="btn">Join Waitlist</a></div>
             </div>
           </div>
