--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ $(document).ready(function(){
     <div class="row">
       <div class="col-xl-6 col-lg-6 col-md-7 col-12">
         <div class="hero-content">
-          <h1 font-family: Inter>Invest in lawsuits.</h1>
+          <h1 font-family: Inter>Invest in lawsuits. </h1>
           <p>Leginar is building the platform for people to invest in lawsuits.</p>
           <div class="hero-btn"><a href="https://airtable.com/shrnOGkO3SrQm05h2" target="_blank" class="btn">Join Waitlist</a></div>
         </div>
@@ -244,7 +244,7 @@ Once the case closes, shareholders make a return on their investment proportiona
 
 
 <!-- Course section -->
-<section class="course-section position-relative" style="background-color: #ffffff;">
+<section class="course-section position-relative" style="background-color: #F7f4ed;">
 
 <!-- Course section -->
 
@@ -390,7 +390,7 @@ Once the case closes, shareholders make a return on their investment proportiona
 
 
 <!-- Footer Section -->
-<div class="footer-section position-relative mt-4 mt-sm-0" style="z-index: 1; background-color:#ffffff;">
+<div class="footer-section position-relative mt-4 mt-sm-0" style="z-index: 1; background-color:#F7f4ed;">
   <div class="container margin-decrese" style="border-style: none; margin-top:1rem;">
       <div class="row justify-content-center">
           <div class="col-md-9 col-lg-8 col-xl-7" data-aos="flip-down" data-aos-delay="30" data-aos-duration="2000" data-aos-once="true">
